<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_cliente_agregar"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:orientation="vertical"
tools:context="cl.duoc.pruebagifty.AgregarClienteActivity">

<ScrollView
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edRutAgregarCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rut" />


        <EditText
            android:id="@+id/edNombreAgregarCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nom" />
        <EditText
            android:id="@+id/edApellidosAgregarCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ape" />

        <EditText
            android:id="@+id/edDireccionAgregarCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/dir" />

        <EditText
            android:id="@+id/edCiudadAgregarCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/ciudad" />

        <EditText
            android:id="@+id/edComunaAgregarCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/comuna" />

        <EditText
            android:id="@+id/edLatitudAgregarCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/Lat" />

        <EditText
            android:id="@+id/edLongitudAgregarCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/lon" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fnac" />
        <EditText
            android:id="@+id/dtFechaNacimientoAgregarCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:hint="nnac"/>

        <EditText
            android:id="@+id/edListaDedRegalosDeseadosAgregarCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/listreg" />

        <Button
            android:id="@+id/btnAgregarCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regcl" />
    </LinearLayout>
</ScrollView>
</LinearLayout>

